--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ colorama==0.4.6
 Flask==1.1.2
 Flask-JWT-Extended==3.24.1
 Flask-Migrate==2.5.3
-flask-restplus==0.13.0
+flask-restx
 Flask-SQLAlchemy==2.4.4
 greenlet==3.2.4
 itsdangerous==1.1.0
