--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,38 @@
+alembic==1.14.1
 aniso8601==10.0.1
 attrs==25.4.0
-blinker==1.4
-click==7.1.2
+blinker==1.9.0
+cachelib==0.13.0
+click==8.3.1
 colorama==0.4.6
-Flask==1.1.2
+Flask==3.1.2
+Flask-Caching==2.3.1
 Flask-JWT-Extended==3.24.1
 Flask-Migrate==2.5.3
-flask-restx
-Flask-SQLAlchemy==2.4.4
+flask-restplus==0.13.0
+flask-restx==1.3.2
+Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
 jsonschema==3.2.0
-MarkupSafe==1.1.1
-marshmallow~=3.14.1
+Mako==1.3.10
+MarkupSafe==3.0.3
+marshmallow==3.14.1
+PyJWT==2.11.0
+pyrsistent==0.20.0
 python-dotenv==0.14.0
-python-magic==0.4.22
 python-editor==1.0.4
+python-magic==0.4.22
 python-slugify==4.0.1
 pytz==2021.1
 redis==4.5.4
 referencing==0.37.0
 rpds-py==0.29.0
+setuptools==80.10.2
 six==1.15.0
-SQLAlchemy==1.3.18
+SQLAlchemy==2.0.46
+text-unidecode==1.3
 typing_extensions==4.15.0
-Werkzeug==0.16.1
+Werkzeug==3.1.5
